Fixed the overflow in menu page with responsiveness

--- a/style.css
+++ b/style.css
@@ -490,7 +490,28 @@ nav a{
         letter-spacing: 0.2rem;
     }
 
-
+    .menus .close i{
+        font-size: 2rem;
+        padding: 0.4rem 0.5rem;
+    }
+    .menus .links{
+        margin-top: 15vw;
+        padding: 6% 0;
+        gap: 2rem;
+    }
+    .menus .links .link{
+        width: 80%;
+        padding-left: 0rem; 
+    }
+    .menus .links .link a{
+        font-size: 2.5rem;
+        font-weight: 100;
+    }
+    .menus .links .link i{
+        font-size: 3rem;
+    }
+    
+    
 
 
 
